<resources>
    <string name="app_name">My Eggs</string>
    <string name="action_settings">Settings</string>
    <string name="ovaryres">My Eggs</string>
    <string name="empty"></string>
    <string name="age">Personal Details</string>
    <string name="medic">Medical Details</string>
    <string name="howold">Age</string>
    <string name="required">(required)</string>
    <string name="iam">I am\u0020</string>
    <string name="and">\u0020and\u0020</string>
    <string name="years">years,</string>
    <string name="months">months.</string>
    <string name="leftov">Left Ovary</string>
    <string name="rightov">Right Ovary</string>
    <string name="firstuse">Configuring app for first time use. Please wait....</string>
    <string name="firstusetitle">App Configuration</string>
    <string name="copyright">Copyright ©\u0020</string>
    <string name="name">Olalekan Baruwa.\u0020</string>
    <string name="allrights">All rights reserved.</string>
    <string name="weight">Weight:\u0020</string>
    <string name="weighthint">Your Weight</string>
    <string name="height">Height:\u0020</string>
    <string name="chooseheight">Your Height</string>
    <string name="body">Body</string>
    <string name="fromblood">Blood Test Results (if known)</string>
    <string name="fromultrasound">Ultrasound Results (if known)</string>
    <string name="genetics2">Genetics</string>
    <string name="periods">Do you have regular periods?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="overall">Overall Advice</string>
    <string name="history">Usage History</string>
    <string name="menu">Menu</string>
    <string name="pcalc">Personalized Calculator</string>
    <string name="nousage">No usage history available.</string>
    <string name="web">Web</string>
    <string name="ageerrortitle">Error</string>
    <string name="ageerror">Your age is required before you can proceed. (Choose your birth year and month)</string>
    <string name="todo">What would you like to do?</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="goback">Go back</string>
    <string name="delItem">Are you sure you want to delete this item?</string>
    <string name="resnotavail">N/A</string>
    <string name="resnotavailfull">Results not available for specified age.</string>
    <string name="exit">Exit</string>
    <string name="menopause">"Your Mother's Age at Menopause (if known)"</string>
    <string name="menopause2">"Mother's Age at Menopause"</string>
    <string name="mage">"Mother's age"</string>
    <string name="mmagevaluetext">"Menopause typically occurs at age 50-51 years, but there is a large range. Menopause before age 45 is early menopause, and menopause before age 40 is known as Premature Ovarian Insufficiency (POI).
        \n\n
        There is substantial evidence that genetic factors play a major role in determining a woman’s age at menopause. 
        It is likely that this influence is exerted through an effect on ovarian reserve. 
        One of the most frequently studied areas is the association between mothers’ and daughters’ ages at menopause. 
        Since mothers and daughters share 50% of their genes, if age at menopause is affected by genetic factors, 
        it is likely that a significant correlation would exist between mothers’ and daughters’ ages at menopause. Based on the research in this \u0020"</string>
    <string name="mmagevaluetext2">the heritability of menopausal age was 44%, which is quite significant in knowing the ovarian reserve levels.</string>
    <string name="amh">AMH value.</string>
    <string name="amhvalue">AMH Value (ng/L or pm/L)</string>
    <string name="amhhint">Your AMH value</string>
    <string name="amhvaluetext">"
        Your Anti-Mullerian Hormone (AMH) value is derived from a blood test. It has recently been shown that AMH provides an indirect measure of certain aspects of ovarian function, useful in predicting outcomes for asssisted conception attempts, and in assessing conditions such as polycystic ovary syndrome and premature ovarian insufficiency."
        </string>
    <string name="fsh">FSH value.</string>
    <string name="fshvalue">FSH Value (IU/L)</string>
    <string name="fshhint">Your FSH value</string>
    <string name="fshvaluetext">"Follicle-stimulating Hormone (FSH) is a hormone that stimulates the growth of egg follicles, therefore it plays a vital role in helping to determine your fertility.
     \n
     Any FSH value below 10 International Units per Litre (IU/L) is within normal ranges. 
     
     Elevated FSH indicates that your are either menopausal or approaching the menopause. What elevated means depends on where in the cycle the FSH measurement was taken.     
     
     \n If the measurement was taken in the <b>Early Follicular Phase</b> (typically day three to five, counted from last menstruation), then any value over 10 IU/L is elevated, indicating approach of the menopause.
     \n
     If the measurement is taken at any other time during the cycle, then a value over 25 IU/L is elevated.
     \n
     Click on the following link to read more about the <b>Science behind your FSH levels</b>:\u0020
     "</string>
    <string name="vol">ovarian volume.</string>
    <string name="volvalue">Ovarian Volume (mL)</string>
    <string name="volhint">Enter volume</string>
    <string name="volvaluetext">"Ovarian volume is a calculation/measurement of the length, width, and depth of each of the ovaries. Medical studies have correlated ovarian size with a woman's ability to respond adequately to fertility medications."</string>
    <string name="afc">antral-follicle count.</string>
    <string name="afcvalue">Antral-Follicle Count</string>
    <string name="afchint">Enter AFC value</string>
    <string name="afcvaluetext">"Antral Follicles are developing ovarian follicles that have grown so large that they can be seen in ultrasound scans. 
        \n
 Your Antral Follicle Count (AFC) is the number found on a scan of your ovary. 
 \n
 A high AFC indicates that you have an active ovary that has many follicles developing towards being eggs that can be fertilized. For this reason an average or high AFC is often taken as an indication of good fertility, and low AFCs may indicate fertility problems. 
 \n
 AFCs will change every month or so, since the ovaries are not generally active at exactly the same rate. So a low AFC in one scan may be just bad luck, with later scans showing higher, more normal, AFCs. Conversely, a high AFC might just be good luck, so if at all possible, you should have more than one scan taken.
 "</string>
    <string name="ngfvalue">Your remaining Ovarian Reserve</string>
    <string name="ngfvaluetext">"The cells that can become eggs are called non-growing follicles (<b>NGFs</b> for short). You were born with a fixed number of NGFs in your ovaries, this is your <b>Ovarian Reserve</b>. Typically there are about 400,000 in each ovary, but there is a large amount of variation so you could have been born with between 70,000 and 3 million NGFs.
         \n
There is a cycle that recruits some NGFs which grow into bigger and bigger follicles, but most of them die during the cycle. Only very few (about 400 for your whole reproductive lifespan) turn into eggs that can be fertilized.
        \n
It is believed that women who start with a high Ovarian Reserve lose NGFs quickly and women who have a low Ovarian Reserve lose NGFs slowly. This is because menopause happens for all women when there are about 1,000 NGFs left at an average age of 51 years.
         \n
This enables us to estimate the percentage of NGFs remaining for a woman of any age. The estimates are based on the Wallace-Kelsey model of NGF populations throughout life. Click on the link below to read the <b>Science behind your results</b>:\u0020"</string>
    <string name="smokingtext">"Smoking is linked to an earlier menopause, because in late reproductive age women at a given time, smokers are more likely to be menopausal than non-smokers. 
        Research has shown that women who smoke more often than not reach the menopausal age earlier that non-smokers."</string>
    <string name="bmivaluetext">There is currently no concrete evidence that a high BMI will result in an adverse effect on the ovarian reserve.</string>
    <string name="proceed">Proceed</string>
    <string name="info">Information</string>
    <string name="birthyear">Birth Year:\u0020</string>
    <string name="birthmonth">Birth Month:\u0020</string>
    <string name="choosebirthyear">Select Year</string>
    <string name="choosebirthmonth">Select Month</string>
    <string name="typecountry">Type to search</string>
    <string name="calcing">Processing</string>
    <string name="calcvalue">Calculated value:\u0020</string>
    <string name="afcresult">Your Antral Follicle Count status is:\u0020</string>
    <string name="amhresult">Your AMH status is:\u0020</string>
    <string name="ovaresult">Your Ovarian Volume status is:\u0020</string>
    <string name="fshGresult">Your FSH level is within normal ranges.</string>
    <string name="fshYresult">Your FSH level may be abnormally high.</string>
    <string name="fshRresult">Your FSH level is abnormally high.</string>
    <string name="mmaGresult">"Your Mother's age at menopause was within normal ranges."</string>
    <string name="mmaYresult">"Your Mother's age at menopause was significantly lower than average."</string>
    <string name="mmaRresult">"Your Mother had Premature Ovarian Insufficiency - this may be cause for concern."</string>
    <string name="ngfresult1">"You have about\u0020"</string>
    <string name="resvisual">Result Visualization</string>
    <string name="resultstatus">Status:\u0020</string>
    <string name="descriptiontitle">Interpretation:\u0020</string>
    <string name="privacy">This application sends no information about your answers to any server. Your results are calculated directly on your device. The individualised results generated by MyOvaries are based on works published by medical practitioners and accredited academics in influential and reputable peer-reviewed journals.\u0020</string>
	<string name="privacytitle">Privacy Policy</string>
	<string name="aboutus">About Us</string>
	<string name="aboutus1">"Professor W. Hamish B. Wallace MB.BS., MD (Lond)., FRCP (Edin)., FRCPCH., FRCS is a Consultant Paediatric Oncologist at the Royal Hospital for Sick Children, Edinburgh and Honorary Professor in the School of Clinical Sciences and Community Heath at the University of Edinburgh.
"</string>
	<string name="aboutus2">"His research focuses on the late effects of treatment on survivors of childhood cancer, fertility preservation, and clinical trials of Hodgkin's lymphoma. He is President of EuroNet, the European network for paediatric Hodgkin's lymphoma."</string>
	<string name="aboutus3">Thomas W. Kelsey BSc., MSc., PhD, MISFP, MISCB, FRSM is a Senior Lecturer at the University of St Andrews, and an international expert in biomedical mathematical modelling.</string>
	<string name="aboutus4">He specialises in data-driven knowledge discovery, computational oncofertility, and AI search. His other research interests include symmetry-breaking in constraints satisfaction problems, Casimir forces, and the enumeration of abstract algebraic entities.</string>
	<string name="aboutus5">Olalekan Baruwa BSc., MSc., is a software developer with a solid industrial experience in developing web and mobile applications.</string>
	<string name="aboutus6">He worked on this project under the supervision of Dr Tom Kelsey, gaining a Distinction award from the University of St Andrews in 2013.</string>
	<string name="readmore">read more</string>
	<string name="ok">OK</string>
</resources>