<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:id="@+id/scrollView2" android:layout_width="match_parent" 
    android:layout_height="match_parent" android:fadeScrollbars="true"
    android:orientation="vertical"
	android:background="#ffffff"
	android:padding="10dp"
    android:scrollbarFadeDuration="1000">
	<LinearLayout
		android:id="@+id/widgetgyg"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="center_horizontal"
		>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
			<LinearLayout
				android:layout_width="20dp"
				android:layout_height="match_parent"
				android:background="#CC00CC"/>
			<TextView
				android:id="@+id/widget43"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/aboutus"
				android:paddingLeft="2dp"
				android:textSize="20sp"
				android:layout_gravity="left" android:textColor="#000000" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/widget4212"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" android:paddingTop="10dp"
			>
			<TextView
				android:id="@+id/widget43345"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/aboutus1"
				android:textSize="16sp"
				android:gravity="left" android:textColor="#0099ff" />
			<TextView
				android:id="@+id/wid112345"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/aboutus2"
				android:textSize="14sp" android:textStyle="italic"
				android:paddingLeft="10dp" android:layout_marginTop="5dp"
				android:gravity="left" android:textColor="#000000" />
			<TextView
				android:id="@+id/readmore1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/readmore"
				android:textSize="14sp" android:textStyle="bold"
				android:paddingRight="20dp" android:layout_marginTop="2dp"
				android:layout_gravity="right" android:textColor="#000000" />
			
			<TextView
				android:id="@+id/wid321t3345"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/aboutus3"
				android:textSize="16sp" android:layout_marginTop="10dp"
				android:gravity="left" android:textColor="#0099ff" />
			<TextView
				android:id="@+id/widg908345"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/aboutus4"
				android:textSize="14sp" android:textStyle="italic"
				android:paddingLeft="10dp" android:layout_marginTop="5dp"
				android:gravity="left" android:textColor="#000000" />
			<TextView
				android:id="@+id/readmore2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/readmore"
				android:textSize="14sp" android:textStyle="bold"
				android:paddingRight="20dp" android:layout_marginTop="2dp"
				android:layout_gravity="right" android:textColor="#000000" />
			
			<TextView
				android:id="@+id/wid3cxz3345"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/aboutus5"
				android:textSize="16sp" android:layout_marginTop="10dp"
				android:gravity="left" android:textColor="#0099ff" />
			<TextView
				android:id="@+id/wizaq8345"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/aboutus6"
				android:textSize="14sp" android:textStyle="italic"
				android:paddingLeft="10dp" android:layout_marginTop="5dp"
				android:gravity="left" android:textColor="#000000" />
			<TextView
				android:id="@+id/readmore3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/readmore"
				android:textSize="14sp" android:textStyle="bold"
				android:paddingRight="20dp" android:layout_marginTop="2dp"
				android:layout_gravity="right" android:textColor="#000000" />
			
			<Button
				android:id="@+id/cmdOk"
				android:layout_width="100dp"
				android:layout_height="50dp"
				android:text="@string/ok"
				android:background="#CC00CC"
			    android:textColor="#ffffff"
			    android:padding="10dp"
				android:layout_gravity="right"
				android:layout_marginTop="10dp" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>