<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent"
    >

    <ImageView
        android:id="@+id/widget43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/empty"
        android:layout_centerInParent="true"
        android:src="@drawable/splash_icon" />
    
    <LinearLayout
		android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_margin="10dp"
		android:orientation="horizontal">
	    <TextView
	        android:id="@+id/lblCopyright"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/copyright"
	        android:textColor="#000000"
	        android:textSize="12sp"
	        android:textStyle="bold" />
	    <TextView
	        android:id="@+id/lblName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/name"
	        android:textColor="#000000"
	        android:textSize="12sp"
	        android:textStyle="bold" />
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/allrights"
	        android:textColor="#000000"
	        android:textSize="12sp"
	        android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>