<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/expbg"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txttop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
        android:textColor="#ffffff"
        android:text="@string/ovaryres"
        android:textSize="40sp" />
    
    <ScrollView 
        android:id="@+id/scrollView2" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txttop">
	    <LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/bgshape"
					android:orientation="vertical"
					>
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/age"
						android:textSize="18sp"
						android:textStyle="bold"
						android:layout_marginTop="10dp"
						android:layout_marginLeft="10dp"
						android:textColor="#ffffff" />
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/howold"
						android:textSize="16sp"
						android:textStyle="bold"
						android:layout_margin="10dp"
						android:textColor="#ffffff" />
					<RelativeLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:background="@drawable/bgshape2"
						>
						<TextView
						    android:id="@+id/lblbirth"
							android:layout_width="100dp"
							android:layout_height="wrap_content"
							android:text="@string/birthyear"
							android:layout_marginLeft="20dp"
							android:textSize="16sp"
							android:textStyle="bold"
							android:textColor="#ffffff" />
						<Spinner
							android:id="@+id/spinBirthYear"
							android:layout_marginRight="10dp"
							android:layout_toRightOf="@+id/lblbirth"
							android:layout_width="match_parent"
							android:layout_height="wrap_content" />
					</RelativeLayout>
					<RelativeLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:background="@drawable/bgshape2"
						>
						<TextView
						    android:id="@+id/lblbirthmon"
							android:layout_width="100dp"
							android:layout_height="wrap_content"
							android:text="@string/birthmonth"
							android:textSize="16sp"
							android:textStyle="bold"
							android:layout_marginLeft="20dp"
							android:textColor="#ffffff" />
						<Spinner
							android:id="@+id/spinBirthMonth"
							android:layout_marginRight="10dp"
							android:layout_toRightOf="@+id/lblbirthmon"
							android:layout_width="match_parent"
							android:layout_height="wrap_content" />
					</RelativeLayout>
				</LinearLayout>
				
				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:layout_gravity="center"
					android:background="@drawable/bgshape2"
					>
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/medic"
						android:textSize="18sp"
						android:textStyle="bold"
						android:background="@drawable/bgshape2"
						android:layout_marginTop="20dp"
						android:layout_marginLeft="10dp"
						android:textColor="#ffffff" />
					<LinearLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:layout_gravity="center"
						android:background="@drawable/bgshape2"
						>
						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/amhvalue"
							android:textSize="16sp"
							android:textStyle="bold"
							android:layout_margin="10dp"
							android:textColor="#ffffff" />
						<RelativeLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="horizontal"
							android:layout_gravity="center"
							android:background="@drawable/bgshape2"
							>
							<EditText
								android:id="@+id/txtAMH"
								android:layout_width="fill_parent"
								android:layout_height="50dp"
								android:inputType="number"
								android:hint="@string/amhhint"
								android:background="@drawable/bgeditshape"
								android:textSize="18sp"
								android:textColor="#000000"
								android:singleLine="true"
								android:layout_toLeftOf="@+id/imgAMH"
								android:layout_marginLeft="10dp"
								android:layout_alignParentLeft="true"
								android:maxLength="4"/>
							<ImageView
								android:id="@+id/imgAMH"
								android:layout_width="30dp"
								android:layout_height="30dp"
								android:clickable="true"
								android:contentDescription="@string/empty"
								android:layout_alignParentRight="true"
								android:layout_margin="5dp"
								android:src="@drawable/i_letter"
								/>
						</RelativeLayout>
					</LinearLayout>
					
					<LinearLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:layout_gravity="center"
						android:background="@drawable/bgshape2"
						>
						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/volvalue"
							android:textSize="16sp"
							android:textStyle="bold"
							android:layout_margin="10dp"
							android:textColor="#ffffff" />
						<RelativeLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="horizontal"
							android:layout_gravity="center"
							>
							<EditText
								android:id="@+id/txtVolume"
								android:layout_width="fill_parent"
								android:layout_height="50dp"
								android:inputType="number"
								android:hint="@string/volhint"
								android:background="@drawable/bgeditshape"
								android:textSize="18sp"
								android:singleLine="true"
								android:layout_toLeftOf="@+id/imgVolume"
								android:layout_marginLeft="10dp"
								android:layout_alignParentLeft="true"
								android:maxLength="4"/>
							<ImageView
								android:id="@+id/imgVolume"
								android:layout_width="30dp"
								android:layout_height="30dp"
								android:clickable="true"
								android:contentDescription="@string/empty"
								android:layout_alignParentRight="true"
								android:layout_margin="5dp"
								android:src="@drawable/i_letter"
								/>
						</RelativeLayout>
					</LinearLayout>
					
					<LinearLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:layout_gravity="center"
						android:background="@drawable/bgshape3"
						>
						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/afcvalue"
							android:textSize="16sp"
							android:textStyle="bold"
							android:layout_margin="10dp"
							android:textColor="#ffffff" />
						<RelativeLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="horizontal"
							android:layout_gravity="center"
							android:layout_marginBottom="20dp"
							>
							<EditText
								android:id="@+id/txtAfc"
								android:layout_width="match_parent"
								android:layout_height="50dp"
								android:inputType="number"
								android:hint="@string/afchint"
								android:background="@drawable/bgeditshape"
								android:textSize="18sp"
								android:singleLine="true"
								android:layout_toLeftOf="@+id/imgAfc"
								android:layout_marginLeft="10dp"
								android:layout_alignParentLeft="true"
								android:maxLength="4"/>
							<ImageView
								android:id="@+id/imgAfc"
								android:layout_width="30dp"
								android:layout_height="30dp"
								android:clickable="true"
								android:contentDescription="@string/empty"
								android:layout_alignParentRight="true"
								android:layout_margin="5dp"
								android:src="@drawable/i_letter"
								/>
						</RelativeLayout>
					</LinearLayout>
				</LinearLayout>

				<Button
				    android:id="@+id/cmdProceed"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="20dp"
				    android:textSize="20sp"
				    android:text="@string/proceed" />

		</LinearLayout>
	</ScrollView>
    
</RelativeLayout>
