<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/expbg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txttop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
        android:textColor="#ffffff"
        android:text="@string/ovaryres"
        android:textSize="20sp" />
    
    <ScrollView 
        android:id="@+id/scrollView2" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txttop">
	    <LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			>
			<TextView
			    android:id="@+id/title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/resvisual"
				android:textSize="18sp"
				android:textStyle="bold"
				android:layout_gravity="center"
				android:layout_marginLeft="10dp"
				android:textColor="#ffffff" />

			<LinearLayout
			    android:id="@+id/chart"
			    android:layout_width="match_parent"
			    android:layout_height="0dip"
			    android:layout_marginTop="5dp"
			    android:layout_weight="1"
			    android:orientation="horizontal" >
			<ImageView
			    android:id="@+id/imgchart"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/empty"
				android:layout_marginTop="5dp"
				android:textColor="#ffffff" />
			</LinearLayout>
			<TextView
			    android:id="@+id/lblstatus"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/resultstatus"
				android:textSize="14sp"
				android:textStyle="italic"
				android:layout_marginTop="5dp"
				android:textColor="#ffffff" />
			<TextView
			    android:id="@+id/lbldescription"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/descriptiontitle"
				android:textSize="14sp"
				android:textStyle="italic"
				android:layout_marginTop="5dp"
				android:textColor="#ffffff" />
		</LinearLayout>
	</ScrollView>    
</RelativeLayout>
