<?xml version="1.0" encoding="utf-8"?>
<TableLayout
	android:id="@+id/widget41"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="#ffffff"
	android:padding="10dp"
	xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView android:id="@+id/scrollView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fadeScrollbars="true"
                      android:scrollbarFadeDuration="1000">
<LinearLayout
	android:id="@+id/widgetgyg"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:gravity="center_horizontal"
	>
<LinearLayout
	android:id="@+id/widget42"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical" android:background="#0099ff">
<TextView
	android:id="@+id/widget43"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/info"
	android:textSize="16sp"
	android:layout_gravity="left" android:textColor="#ffffff" />
</LinearLayout>
<LinearLayout
	android:id="@+id/widget4212"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical" android:paddingTop="10dp">
<TextView
	android:id="@+id/lblTitle"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/amhvalue"
	android:textSize="16sp" android:layout_gravity="center"
	android:gravity="left" android:textColor="#0099ff" />

<TextView
	android:id="@+id/lblDetails"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/aboutus2"
	android:textSize="14sp" android:textStyle="italic"
	android:paddingLeft="10dp" android:layout_marginTop="5dp"
	android:gravity="left" android:textColor="#000000" />

<Button
	android:id="@+id/cmdOk"
	android:layout_width="100dp"
	android:layout_height="50dp"
	android:text="@string/ok"
	android:background="#00FF00"
	android:layout_gravity="right"
	android:layout_marginTop="10dp"
	/>
</LinearLayout>
</LinearLayout>
</ScrollView>
</TableLayout>