<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:id="@+id/scrollView2" android:layout_width="match_parent" 
    android:layout_height="match_parent" android:fadeScrollbars="true"
    android:orientation="vertical"
	android:background="#ffffff"
	android:padding="10dp"
    android:scrollbarFadeDuration="1000">
	<LinearLayout
		android:id="@+id/widgetgyg"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="center_horizontal"
		>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<LinearLayout
				android:layout_width="20dp"
				android:layout_height="match_parent"
				android:background="#CC00CC"/>
			<TextView
				android:id="@+id/widget43"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/privacytitle"
				android:paddingLeft="2dp"
				android:textSize="20sp"
				android:layout_gravity="left" android:textColor="#000000" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/widget4212"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical" android:paddingTop="10dp">
		<TextView
			android:id="@+id/lblPrivacy"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/privacy"
			android:textSize="16sp"
			android:gravity="left" android:textColor="#000000"
			android:layout_gravity="center_horizontal" />
		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal" 
			android:paddingTop="10dp">
			<Button
				android:id="@+id/cmdExit"
				android:layout_width="100dp"
				android:layout_height="50dp"
				android:text="@string/exit"
				android:background="#CC00CC"
			    android:textColor="#ffffff"
			    android:padding="10dp"
				android:layout_alignParentLeft="true"
				android:layout_marginTop="10dp"
				/>
			<Button
				android:id="@+id/cmdProceed"
				android:layout_width="100dp"
				android:layout_height="50dp"
				android:text="@string/proceed"
				android:background="#CC00CC"
			    android:textColor="#ffffff"
			    android:padding="10dp"
				android:layout_alignParentRight="true"
				android:layout_marginTop="10dp"
				/>
		</RelativeLayout>
		</LinearLayout>
	</LinearLayout>
</ScrollView>